done landing page

--- a/index.html
+++ b/index.html
@@ -2,38 +2,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stunning Dark</title>
+    <title>PI United Fox</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Monda&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>MOONSHIELD</h1>
+        <a href="index.html"><img src="image/fox 1.png" alt="fox1" width="50px"/></a>
+        <h1>UNITED FOX 47</h1>
+        <ul>
+            <a href="##"><li>HTML</li></a>
+            <a href="##"><li>CSS</li></a>
+            <a href="##"><li>JAVASCRIPT</li></a>
+        </ul>
     </header>
     <main>
-        <div class="separator">
+        <center>WE ARE RELENTLESS CODE WARRIORS</center>
+        <div>
             <div class="box-content" id="box-1">
-            </div>
-            <div class="box-content" id="box-2">
-            </div>
-        </div>
-        <br>    
-        <div class="separator">
-            <div class="box-content" id="box-3">
-            </div>
-            <div class="box-content" id="box-4">
+                <img src="image/fox 2.png" width="150px" alt="fox2" />
             </div>
         </div>
-        <br>
-        <div class="separator">      
-            <div class="box-content" id="box-5">
-            </div>
-            <div class="box-content" id="box-6">
-            </div>
-        </div>    
     </main>
-    <footer>
-        <h3>IT IS ALL ABOUT POSSESION</h3>
-    </footer>
 </body>
 </html>
