--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
         <a href="index.html"><img src="image/fox 1.png" alt="fox1" width="50px"/></a>
         <h1>UNITED FOX 47</h1>
         <ul>
-            <a href="##"><li>HTML</li></a>
-            <a href="##"><li>CSS</li></a>
-            <a href="##"><li>JAVASCRIPT</li></a>
+            <a href="portfolio.html"><li>PORTFOLIO</li></a>
         </ul>
     </header>
     <main>
         <center>WE ARE RELENTLESS CODE WARRIORS</center>
         <div>
-            <div class="box-content" id="box-1">
+            <div class="box-content">
                 <img src="image/fox 2.png" width="150px" alt="fox2" />
             </div>
         </div>
