change typography on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <a id="anchor" href="index.html"><img src="image/fox 1.png" alt="fox1" id="logo"/></a>
-    <div class="box">
+    <div class="box" id="block">
     <p id="text">The soprano is the highest female voice type and they often take the leading female role. The vocal range for an operatic soprano is roughly from middle C up to the C two octaves above, though plenty of music particularly for coloratura sopranos ascends even further.</p>
     <br>
     <p id="text1">Sopranos are split into five major categories:</p> 
     </div>
-    <div class="box">
+    <div class="box1">
         <button onclick="playX()" >COlORATURA</button>
         <button onclick="playY()">SOUBRETTE</button>
         <button onclick="playZ()" >LYRIC</button>
